docs: update api docs
