# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   helper.ErrorResponse:
     properties:
@@ -6,6 +7,11 @@ definitions:
       message:
         type: string
       status:
+        type: integer
+    type: object
+  model.BalanceUpdate:
+    properties:
+      balance:
         type: integer
     type: object
   model.Category:
@@ -53,6 +59,13 @@ definitions:
         type: string
       user_id:
         type: integer
+    type: object
+  model.LoginCredential:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
     type: object
   model.Product:
     properties:
@@ -183,13 +196,23 @@ definitions:
       password:
         type: string
     type: object
+host: final-project-04-production.up.railway.app
 info:
   contact: {}
+  description: API for an e-commerce platform
+  title: Toko Belanja API
+  version: "1.0"
 paths:
   /categories:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -215,6 +238,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Get All Categories.
       tags:
       - Categories
@@ -222,6 +247,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Category object to be created
         in: body
         name: model.Category
@@ -251,6 +281,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Creates a new category
       tags:
       - Categories
@@ -259,6 +291,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Category ID
         in: path
         name: categoryId
@@ -287,6 +324,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Delete a Category.
       tags:
       - Categories
@@ -294,6 +333,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Category ID
         in: path
         name: categoryId
@@ -328,6 +372,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Update a Category.
       tags:
       - Categories
@@ -335,6 +381,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -360,6 +412,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Get All Products.
       tags:
       - Products
@@ -367,6 +421,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Product object to be created
         in: body
         name: model.Product
@@ -396,6 +455,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Creates a new product
       tags:
       - Products
@@ -404,6 +465,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Product ID
         in: path
         name: productId
@@ -432,6 +498,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Delete a Product.
       tags:
       - Products
@@ -439,6 +507,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Product ID
         in: path
         name: productId
@@ -473,6 +546,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Update a Product.
       tags:
       - Products
@@ -481,6 +556,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Transaction object to be created
         in: body
         name: model.TransactionHistory
@@ -510,6 +590,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Creates a new transaction
       tags:
       - Transaction
@@ -517,6 +599,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -542,6 +630,8 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Get User Transactions.
       tags:
       - Transaction
@@ -549,6 +639,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -574,9 +670,49 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
       summary: Get All Transactions.
       tags:
       - Transaction
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: Endpoint to register a new user
+      parameters:
+      - description: authenticate user
+        in: body
+        name: model.LoginCredential
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginCredential'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "422":
+          description: Invalid Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      summary: Authenticate a user
+      tags:
+      - User
   /users/register:
     post:
       consumes:
@@ -614,5 +750,54 @@ paths:
             $ref: '#/definitions/helper.ErrorResponse'
       summary: Register a new user
       tags:
-      - user
+      - User
+  /users/topup:
+    patch:
+      consumes:
+      - application/json
+      description: Endpoint to top-up user balance
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Amount to top-up
+        in: body
+        name: model.User
+        required: true
+        schema:
+          $ref: '#/definitions/model.BalanceUpdate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "422":
+          description: Invalid Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - Bearer: []
+      summary: Topup user balance
+      tags:
+      - User
 swagger: "2.0"
